UPDATE CHRIS TCC

--- a/index.html
+++ b/index.html
@@ -11,9 +11,77 @@
     </header>
 
 
-    <section></section>
-    <section></section>
-    <section></section>
+    <section class="section1" id="">
+
+<h1>
+Você já conhece a Digital Class?
+</h1>
+
+<p>
+    omos referência em educação básica há mais de 60 anos, com escolas parceiras em todo o Brasil!
+    Oferecemos soluções completas para que estudantes e escolas privadas de ensino básico possam 
+    alcançar os melhores resultados ao longo de toda a jornada educacional por meio de ferramentas 
+    inovadoras que apoiam o processo de ensino e aprendizagem.
+</p>
+
+<div class="content-section1">
+
+<div>
+    <img src="" alt="">
+</div>
+
+<div class="list-p">
+<p>
+    Além do material completo, o COC pode te apoiar com serviços de 
+    Gestão Escolar nas principais decisões do dia a dia. O acompanhamento contínuo 
+    e o apoio resolutivo da nossa Consultoria Pedagógica têm sido essenciais para 
+    as escolas parceiras de berçário a pré-vestibular obterem crescimento anual!
+</p>
+
+<ul>
+    <li>
+<p> • CONSULTORIA DE GESTÃO <br>
+
+    Apoio completo para alavancar os resultados da escola <br>
+    Nosso time irá realizar um plano de ação personalizado, baseado em dados e um diagnóstico detalhado da sua escola para impulsionar o crescimento do negócio e a captação de alunos. Além disso, 
+    realizamos um processo conjunto de implantação com reuniões pedagógicas, treinamentos e muito mais!</p>
+    </li>
+    <li>
+<p> • ASSESSORIA DE MARKETING
+
+    Força que impulsiona a marca da sua escola
+    
+    O Portal de Marketing, o kit de matrículas e a nossa consultoria auxiliam o marketing educacional da sua escola de ensino básico. São peças físicas e digitais para atrair mais famílias com a marca forte do COC!</p>
+    </li>
+</ul>
+
+
+</div>
+
+
+</div>
+
+    </section>
+
+    <section class="section2" id="">
+
+        <p></p>
+
+        <h2>
+Lorem ipsum, dolor sit
+        </h2>
+
+        <p></p> <br>
+        <p></p>
+
+        <h2></h2>
+        <p></p>
+    </section>
+
+    <section class="section3">
+<img src="" alt="">
+
+    </section>
 
 
     <footer>
