--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Class | Site Oficial</title>
 </head>
+
 <body>
     <header>
 
@@ -13,7 +15,28 @@
 
     <section></section>
     <section></section>
-    <section></section>
+    <section class="sessão3">
+        <h2>
+            Resultados ao longo de toda a sua jornada!
+        </h2>
+
+        <link rel="" href="you tube">
+
+        <div class="texto1">
+            "Uma parceria que transforma pela assessoria pedagógica constante e pelas relações humanas com
+            toda a equipe. Ser COC é ser
+            pioneiro em educação."
+        </div>
+
+        <div class="texto2">
+            "O COC foi a decisão mais inteligente que tomamos. Um dos resultados foi a construção de identidade dentro da nossa comunidade, com um perfil sólido que fortalece a nossa imagem."
+        </div>
+
+        <div class="texto3">
+            "Estamos prontos para concorrer com as grandes redes. Nossos trabalhos pedagógicos ganharam um outro patamar. A nossa escola hoje está entre as melhores do país."
+        </div>
+
+    </section>
 
 
     <footer>
@@ -21,4 +44,5 @@
     </footer>
     <script src="scrpit.js"></script>
 </body>
+
 </html>
