--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Class | Site Oficial</title>
 </head>
+
 <body>
     <header>
+        <div class="button-1">
+            <a href="">
+                <button type="button">lorem</button>
+            </a>
+        </div>
+        <div class="button-2">
+            <a href="#section-2">
+                <button type="button"></button>
+            </a>
+        </div>
 
+        <div class="button-3">
+            <a href="">
+                <button type="button"></button>
+            </a>
+        </div>
     </header>
 
 
@@ -17,8 +34,22 @@
 
 
     <footer>
+        <div>
+            <img src="" alt="">
+            <h4>tradição</h4>
+            <p>Aprendizagem Baseada em Projetos e Avaliações Formativas há +20 anos</p>
 
+            <img src="" alt="">
+            <h5>Inovação</h5>
+            <p>soluçoes e tecnologias a serviço da aprendizaagem.</p>
+
+            <img src="" alt="">
+            <h6>Resultados</h6>
+            <p>Ao logo de toda a jornada para a comunicação escola.</p>
+
+        </div>
     </footer>
     <script src="scrpit.js"></script>
 </body>
+
 </html>
