TCC- Digital-Class
tcc

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Class | Site Oficial</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/1d0d8f42ce.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -16,7 +18,29 @@
     <section></section>
 
 
+
     <footer>
+
+        <div class="div-img2">
+            <img src="" alt="">
+        </div>
+
+        <div class="div-digital">
+            <p>DIGITAL CLASS EQUIPE DA TECNOLOGIA <br>
+                FAÇA SUA INSCRIÇÃO SEM PRECISA SAIR DE CASA | CONTATO@DIGITALCLASS.COM.BR </p>
+
+                <a href="">POLÍTICA DE PRIVACIDADE</a>
+        </div>
+
+        <div class="div-i">
+            <hr>
+            
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-whatsapp"></i>
+        </div>
+
 
     </footer>
     <script src="scrpit.js"></script>
