--- a/index.html
+++ b/index.html
@@ -30,7 +30,48 @@
     </header>
 
 
-    <section></section>
+    <section>
+        <h2>Você ja conhece a digital class?</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quaerat deleniti suscipit quasi ex ratione expedita non, laboriosam soluta deserunt velit facere nemo adipisci ab necessitatibus vitae esse natus. Culpa?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab quia odio deserunt, necessitatibus quos id fugit omnis doloribus, dolorum optio aliquid amet accusamus vero veniam veritatis animi saepe voluptatum laboriosam.</p>
+
+        <img src="" alt="">
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sunt optio architecto doloribus quisquam dolorem, omnis odit aperiam incidunt qui magnam at dicta, laudantium, eveniet quibusdam. Quo sed necessitatibus vel. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi quisquam nihil magnam quaerat corporis perferendis consequuntur, aliquam corrupti officia consequatur esse optio velit perspiciatis beatae? Suscipit a exercitationem optio tenetur.</p>
+        <ul>
+            <li>consultorio de gestão</li>
+            <li>apoio completo para alavancar os resultados da escola</li>
+        </ul>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, ipsum. Quidem, deserunt? Porro corrupti, cum delectus eaque cumque veniam deleniti sit dolorum rem qui magni eligendi, hic placeat! Vitae, quam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum voluptate harum eius, perferendis omnis veritatis distinctio ipsa, consectetur molestias quis esse in vitae alias aperiam iusto repellat. Accusamus, odit asperiores?</p>
+
+        <ul>
+            <li>ASSESSORIA DE MARKETING</li>
+            <li>Força que impulsiona a marca da sua escola</li>
+        </ul>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, expedita dolore dignissimos, eligendi veritatis eius consequatur maxime unde hic neque soluta doloremque dolor similique ab illum accusantium tempore, quam corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, voluptates quisquam dolorem, iste optio culpa eaque magnam molestiae harum praesentium accusamus quis at dignissimos, dolorum ullam natus obcaecati id perspiciatis.</p>
+
+        <div class="div-pai">
+            <div>
+                <img src="" alt="">
+                Do Berçário ao Pré-Vestibular
+
+                Formação integral para os melhores resultados na educação básica.
+            </div>
+
+            <div>
+                <img src="" alt="">
+Consultoria escolar
+
+Orientação personalizada e formação continuada.
+            </div>
+            <img src="" alt="">
+            Tecnologias educacionais
+
+            Soluções a favor da aprendizagem para personalizar o ensino.
+            <div>
+
+            </div>
+        </div>
+    </section>
     <section></section>
     <section class="sessão3">
         <h2>
