--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
 
 <body>
     <header>
-        <div class="button-1">
+
+        <div class="button button-purple" id="buttonHeader">
             <a href="">
-                <button type="button">lorem</button>
-            </a>
-        </div>
-        <div class="button-2">
-            <a href="#section-2">
-                <button type="button"></button>
+                <button type="button">Sou professor(a)</button>
             </a>
         </div>
 
-        <div class="button-3">
-            <a href="">
-                <button type="button"></button>
+        <div class="button button-green" id="buttonHeader">
+            <a href="#section-2">
+                <button type="button">Sou Mantenedor(a), Diretor(a) ou Coordenador(a)</button>
             </a>
         </div>
+
+        <div class="button button-purple" id="buttonHeader">
+            <a href="">
+                <button type="button">Sou estudante</button>
+            </a>
+        </div>
+
     </header>
 
 
@@ -99,22 +102,20 @@ Orientação personalizada e formação continuada.
 
 
     <footer>
-        <div>
-            <img src="" alt="">
-            <h4>tradição</h4>
-            <p>Aprendizagem Baseada em Projetos e Avaliações Formativas há +20 anos</p>
+        <div class="flexbox">
 
-            <img src="" alt="">
-            <h5>Inovação</h5>
-            <p>soluçoes e tecnologias a serviço da aprendizaagem.</p>
+            <div class="links">
 
-            <img src="" alt="">
-            <h6>Resultados</h6>
-            <p>Ao logo de toda a jornada para a comunicação escola.</p>
+            </div>
+
+            <div class="images">
+
+            </div>
 
         </div>
     </footer>
-    <script src="scrpit.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
