TCC---Digital-Class
Update

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+    <!--  -->
     <header>
 
         <div class="button button-purple" id="buttonHeader">
@@ -32,8 +34,8 @@
 
     </header>
 
-
-    <section>
+  <!-- Primeira sessão da nossa página -->
+    <section class="sessão1">
         <h2>Você ja conhece a digital class?</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quaerat deleniti suscipit quasi ex ratione expedita non, laboriosam soluta deserunt velit facere nemo adipisci ab necessitatibus vitae esse natus. Culpa?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab quia odio deserunt, necessitatibus quos id fugit omnis doloribus, dolorum optio aliquid amet accusamus vero veniam veritatis animi saepe voluptatum laboriosam.</p>
 
@@ -75,7 +77,16 @@ Orientação personalizada e formação continuada.
             </div>
         </div>
     </section>
-    <section></section>
+
+    <!-- A segunda sessão da nossa página -->
+    <section class="sessão2">
+
+    </section>
+
+
+
+
+    <!-- Aqui é a terceira sessão da nossa página -->
     <section class="sessão3">
         <h2>
             Resultados ao longo de toda a sua jornada!
@@ -101,6 +112,7 @@ Orientação personalizada e formação continuada.
 
 
 
+    <!-- Aqui estamos trabalhando no footer da nossa página -->
     <footer>
         <div class="flexbox">
 
@@ -109,11 +121,12 @@ Orientação personalizada e formação continuada.
             </div>
 
             <div class="images">
-
+                <img src="" alt="">
             </div>
 
         </div>
     </footer>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
 </body>
