--- a/home.html
+++ b/home.html
@@ -3,32 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="home.css">
     <title>Digital Class | Ensino em geral</title>
 </head>
 <body>
     <header>
+<img src="" alt="">
+<ul>
+    <a href="">HOME</a>
+    <a href="">SOBRE</a>
+    <a href="">SOLUÇÕES</a>
+    <a href="">BLOG</a>
+    <a href="">CONTATO</a>
+</ul>
 
-    </header>
-
-
-<section></section>
-
-<section></section>
-
-<section></section>
-
-<section></section>
-
-<section></section>
-
-<section></section>
-
-<section></section>
-
-
-
-    <footer>
-
+<button>Portal DC</button>
     </footer>
 </body>
 </html>
