--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Class | Ensino em geral</title>
+    <link rel="shortcut icon" href="imagens/Logo-DigitalClass.png" type="image/x-icon">
 </head>
 <body>
     <header>
