--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-<img src="" alt="">
+<img src="imagens/Logo-DigitalClass.png" alt="icon-digital-DigitalClass">
 <ul>
     <a href="">HOME</a>
     <a href="">SOBRE</a>
@@ -19,6 +19,18 @@
 </ul>
 
 <button>Portal DC</button>
+    </header>
+
+
+
+<section class="section-1">
+    <nav>
+
+    </nav>
+</section>
     </footer>
+
+
+    <script src="home.js"></script>
 </body>
 </html>
