--- a/home.html
+++ b/home.html
@@ -12,25 +12,91 @@
 <img src="imagens/Logo-DigitalClass.png" alt="icon-digital-DigitalClass">
 <ul>
     <a href="">HOME</a>
-    <a href="">SOBRE</a>
-    <a href="">SOLUÇÕES</a>
+    <a href="">QUEM SOMOS?</a>
+    <a href="">CURSOS</a>
     <a href="">BLOG</a>
     <a href="">CONTATO</a>
 </ul>
 
-<button>Portal DC</button>
+<div class="button">
+    <a href=""><button>Portal Digital Class</button></a>
+</div>
     </header>
 
 
 
 <section class="section-1">
     <nav>
+<div class="container-carrossel">
 
+    <div class="itens-carrossel" id="itensCarrossel">
+
+            <div class="carrossel-item">
+                <a href="">
+                <img src="imagens/1.png" alt="item carrossel1">
+            </a>
+</div>
+
+<div class="carrossel-item">
+    <a href="">
+        <img src="imagens/2.png" alt="item carrossel2">
+    </a>
+</div>
+
+<div class="carrossel-item">
+    <a href="">
+        <img src="imagens/3.png" alt="item carrossel3">
+    </a>
+</div>
+
+<div class="carrossel-item">
+    <a href="">
+        <img src="imagens/4.png" alt="item carrossel4">
+    </a>
+</div>
+
+<div class="carrossel-item">
+    <a href="">
+    <img src="imagens/1.png" alt="clone">
+</a>
+</div>
+
+
+<div class="carrossel-item">
+    <a href="">
+        <img src="imagens/2.png" alt="item carrossel2">
+    </a>
+</div>
+
+<div class="carrossel-item">
+    <a href="">
+        <img src="imagens/3.png" alt="item carrossel3">
+    </a>
+</div>
+
+<div class="carrossel-item">
+    <a href="">
+        <img src="imagens/4.png" alt="item carrossel4">
+    </a>
+
+    </div>
+
+
+    
+</div>
     </nav>
 </section>
+
+
+<section class="section2">
+
+</section>
+
+
     </footer>
 
-
+<!-- Script para carregar a biblioteca ScrollReveal, que cria o efeito de rolagem -->
+<script src="https://unpkg.com/scrollreveal"></script>
     <script src="home.js"></script>
 </body>
 </html>
