--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
                     <div class="text-content">
                         <p>
-                            Além do material completo, a <span>DC</span> pode te apoiar com serviços de <span>Gestão Escolar</span> nas
+                            Além do material completo, a <span>DC</span> pode te apoiar com serviços de <span>Gestão
+                                Escolar</span> nas
                             principais decisões do dia a dia. O acompanhamento contínuo e o apoio resolutivo da nossa
                             Consultoria Pedagógica têm sido essenciais para as escolas parceiras de berçário a
                             pré-vestibular obterem <span>crescimento anual!</span>
@@ -118,12 +119,28 @@
                             </span>
                         </p>
                         <p>
-                            O Portal de Marketing, o kit de matrículas e a nossa consultoria auxiliam o marketing educacional da sua escola de ensino básico. São peças físicas e digitais para atrair mais famílias com a marca forte da Digital Class!
+                            O Portal de Marketing, o kit de matrículas e a nossa consultoria auxiliam o marketing
+                            educacional da sua escola de ensino básico. São peças físicas e digitais para atrair mais
+                            famílias com a marca forte da Digital Class!
                         </p>
                     </div>
                 </div>
             </div>
         </section>
+
+        <footer>
+            <div class="flexbox-footer">
+                <div class="box-footer">
+                    <img src="imagens/trophy.png" alt="">
+                </div>
+                <div class="box-footer">
+                    <img src="imagens/ideia.png" alt="">
+                </div>
+                <div class="box-footer">
+                    <img src="imagens/target.png" alt="">
+                </div>
+            </div>
+        </footer>
 
         <script src="https://unpkg.com/scrollreveal"></script>
         <script src="script.js"></script>
