--- a/home.html
+++ b/home.html
@@ -6,20 +6,22 @@
     <link rel="stylesheet" href="home.css">
     <title>Digital Class | Ensino em geral</title>
     <link rel="shortcut icon" href="imagens/Logo-DigitalClass.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/c65f603f95.js" crossorigin="anonymous"></script>
+     <script src="https://kit.fontawesome.com/1d0d8f42ce.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
 <img src="imagens/Logo-DigitalClass.png" alt="icon-digital-DigitalClass">
 <ul>
-    <a href="">HOME</a>
+    <a href="">INÍCIO</a>
     <a href="">QUEM SOMOS?</a>
+    <a href="">CONTATE-NOS</a>
     <a href="">CURSOS</a>
     <a href="">BLOG</a>
-    <a href="">CONTATO</a>
 </ul>
 
-<div class="button">
-    <a href=""><button>Portal Digital Class</button></a>
+<div class="login">
+    <i class="fa-solid fa-user"></i>
 </div>
     </header>
 
@@ -93,6 +95,27 @@
 </section>
 
 
+    <footer>
+
+
+
+
+
+
+
+
+
+
+
+        <a href="">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="">    
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a href="">
+            <i class="fa-brands fa-facebook"></i>
+        </a>
     </footer>
 
 <!-- Script para carregar a biblioteca ScrollReveal, que cria o efeito de rolagem -->
