--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
     <header>
 <img src="imagens/Logo-DigitalClass.png" alt="icon-digital-DigitalClass">
 <ul>
-    <a href="">INÍCIO</a>
-    <a href="">QUEM SOMOS?</a>
+    <a href="">HOME</a>
+    <a href="index.html">QUEM SOMOS?</a>
     <a href="">CONTATE-NOS</a>
     <a href="">CURSOS</a>
     <a href="">BLOG</a>
@@ -97,26 +97,100 @@
 
     <footer>
 
+<div class="container-footer">
 
-
-
-
-
-
-
-
-
-
+    
+    <div class="itens-footer1">
         <a href="">
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-instagram"><span>@digital_class</span></i>
         </a>
         <a href="">    
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-solid fa-envelope"><span>digitalClassWorking@gmail.com</span></i>
         </a>
         <a href="">
-            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-facebook"><span>Digital Class</span></i>
         </a>
-    </footer>
+    </div>
+
+
+<div class="itens-footer2">
+<ul>
+    <a href="">
+        <li> <span>Páginas</span></li>
+    </a>
+    <a href="">
+        <li>Home</li>
+    </a>
+    <a href="">
+        <li>Quem somos?</li>
+    </a>
+    <a href="">
+        <li>Contate-nos</li>
+    </a>
+    <a href="">
+        <li>Cursos</li>
+    </a>
+    <a href="">
+        <li>Blog</li>
+    </a>
+</ul>
+</div>
+
+
+<div class="itens-footer2">
+    <ul>
+        <a href="">
+            <li> <span>Contato</span></li>
+        </a>
+        <a href="">
+            <li>Fale com a Digital Class</li>
+        </a>
+        <a href="">
+            <li>Ouvidoria</li>
+        </a>
+        <a href="">
+            <li>FAQ</li>
+        </a>
+        <a href="">
+            <li>Trabalhe conosco</li>
+        </a>
+        <a href="">
+            <li>Dúvidas</li>
+        </a>
+    </ul>
+    </div>
+
+
+    <div class="itens-footer2">
+        <ul>
+            <a href="">
+                <li> <span>Soluções</span></li>
+            </a>
+            <a href="">
+                <li>Recursos Didáticos</li>
+            </a>
+            <a href="">
+                <li>Educação Digital</li>
+            </a>
+            <a href="">
+                <li>Simulados</li>
+            </a>
+            <a href="">
+                <li>Consultoria</li>
+            </a>
+            <a href="">
+                <li>Gestão de ensino</li>
+            </a>
+        </ul>
+        
+        </div>
+        <img src="imagens/Logo-DigitalClass.png" alt="Logo-DigitalClass">
+
+</div>
+
+
+
+</footer>
 
 <!-- Script para carregar a biblioteca ScrollReveal, que cria o efeito de rolagem -->
 <script src="https://unpkg.com/scrollreveal"></script>
