--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             <p>Digital Class</p>
         </div>
         <div class="links">
-            <a href="#">Quem somos?</a>
-            <a href="#">Contate-nos</a>
-            <a href="#">Cursos</a>
-            <a href="#">Parcerias</a>
+            <a href="home.html">HOME</a>
+            <a href="#">QUEM SOMOS?</a>
+            <a href="#">CONTATE-NOS</a>
+            <a href="#">CURSOS</a>
+            <a href="#">PARCEIRIAS</a>
         </div>
         <div class="login">
             <i class="fa-solid fa-user"></i>
