--- a/home.html
+++ b/home.html
@@ -118,10 +118,10 @@
     <a href="">
         <li> <span>Páginas</span></li>
     </a>
-    <a href="">
+    <a href="home.html">
         <li>Home</li>
     </a>
-    <a href="">
+    <a href="index.html">
         <li>Quem somos?</li>
     </a>
     <a href="">
