--- a/index.html
+++ b/index.html
@@ -15,23 +15,19 @@
 <body>
 
     <div class="div">
-        <div class="text-titule">
-            <p>Digital Class</p>
+        <div class="image-header">
+            <img src="imagens/Logo-DigitalClass.png" alt="">
         </div>
         <div class="links">
             <a href="home.html">HOME</a>
             <a href="#">QUEM SOMOS?</a>
             <a href="#">CONTATE-NOS</a>
             <a href="#">CURSOS</a>
-            <a href="#">PARCEIRIAS</a>
+            <a href="#">BLOG</a>
         </div>
         <div class="login">
             <i class="fa-solid fa-user"></i>
         </div>
-    </div>
-
-    <div class="box-textanimation">
-        <h1 id="textAnimation"></h1>
     </div>
 
     <!--  -->
