contatos.html (HEADER E FOOTER COMENTADOS)

--- a/contatos.html
+++ b/contatos.html
@@ -11,28 +11,32 @@
         <script src="https://kit.fontawesome.com/1d0d8f42ce.js"
             crossorigin="anonymous"></script>
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
- 
     </head>
     <body>
-        <header>
-            <header>
-                <img src="imagens/Logo-DigitalClass.png"
-                    alt="icon-digital-DigitalClass">
-                <ul>
-                    <a href>HOME</a>
-                    <a href="index.html">QUEM SOMOS?</a>
-                    <a href>CONTATE-NOS</a>
-                    <a href>CURSOS</a>
-                    <a href>BLOG</a>
-                </ul>
+        
+      <header>
+<!-- Início do cabeçalho -->
+<img src="imagens/Logo-DigitalClass.png" alt="icon-digital-DigitalClass"> 
+        <!-- Logo do site -->
+<ul>
+<!-- Uma lista com âncoras -->
+    <a href="">HOME</a>
+    <a href="index.html">QUEM SOMOS?</a>
+    <a href="">CONTATE-NOS</a>
+    <a href="">CURSOS</a>
+    <a href="">I.A</a>
+</ul>
+   
+<div class="login">
+<!-- Uma div para poscionar e estilizar no CSS -->
+    <i class="fa-solid fa-user"></i>
+<!-- Ícone do boneco/Login -->
+</div>
+    </header>
+<!-- Fim do cabeçalho -->
 
-                <div class="login">
-                    <i class="fa-solid fa-user"></i>
-                </div>
-            </header>
-
-        </header>
-
+<main>
+<!-- Main para informar que está é a parte principal do site -->
         <section class="section-1">
 
             <img src="" alt="">
@@ -96,6 +100,7 @@
         </section>
 
 
+</main>
          <footer>
 <!-- INÍCIO DO NOSSO RODAPÉ -->
         <nav>
