--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         </div>
 
     </header>
-
+<main>
+<!-- Main para informar que esta é a parte principal do site -->
+    
     <section>
 
         <section class="section section01">
@@ -125,6 +127,7 @@
             </div>
         </section>
 
+</main>
         <footer>
             <div class="flexbox-footer">
                 <div class="box-footer">
