--- a/index.html
+++ b/index.html
@@ -53,97 +53,233 @@
         </div>
 
     </header>
-<main>
-<!-- Main para informar que esta é a parte principal do site -->
-    
-    <section>
+    <main>
+        <!-- Main para informar que esta é a parte principal do site -->
 
-        <section class="section section01">
+        <section>
 
-            <div class="text">
-                <h2>
-                    Você ja conhece a Digital Class?
-                </h2>
+            <section class="section section01">
 
-                <p>
-                    Somos referência em educação de qualidade há mais de
-                    60 anos, com escolas parceiras em todo o Brasil
-                    oferecermos <span>soluções completas</span> para que
-                    estudantes e <span>escolas privadas</span> possam
-                    alcançar os <span>os melhores resultados ao longo de
-                        toda a jornada</span> educacional por meio de
-                    ferramentas inovadoras que apoiam o processo de
-                    ensino e aprendizagem.
-                </p>
+                <div class="text">
+                    <h2>
+                        Você ja conhece a Digital Class?
+                    </h2>
 
-                <div class="image-section01">
+                    <p>
+                        Somos referência em educação de qualidade há mais de
+                        60 anos, com escolas parceiras em todo o Brasil
+                        oferecermos <span>soluções completas</span> para que
+                        estudantes e <span>escolas privadas</span> possam
+                        alcançar os <span>os melhores resultados ao longo de
+                            toda a jornada</span> educacional por meio de
+                        ferramentas inovadoras que apoiam o processo de
+                        ensino e aprendizagem.
+                    </p>
 
+                    <div class="image-section01">
+
+                    </div>
                 </div>
-            </div>
 
-            <div class="text text2">
-                <div class="content">
-                    <img src="imagens/Card.png" alt="">
+                <div class="text text2">
+                    <div class="content">
+                        <img src="imagens/Card.png" alt="">
 
-                    <div class="text-content">
+                        <div class="text-content">
+                            <p>
+                                Além do material completo, a <span>DC</span> pode te apoiar com serviços de <span>Gestão
+                                    Escolar</span> nas
+                                principais decisões do dia a dia. O acompanhamento contínuo e o apoio resolutivo da
+                                nossa
+                                Consultoria Pedagógica têm sido essenciais para as escolas parceiras de berçário a
+                                pré-vestibular obterem <span>crescimento anual!</span>
+                            </p>
+                            <br>
+                            <h3>
+                                CONSULTORIA DE GESTÃO
+                            </h3>
+                            <p>
+                                <span>
+                                    Apoio completo para alavancar os resultados da escola
+                                </span>
+                            </p>
+                            <p>
+                                Nosso time irá realizar um plano de ação personalizado, baseado em dados e um
+                                diagnóstico
+                                detalhado da sua escola para impulsionar o crescimento do negócio e a captação de
+                                alunos.
+                                Além disso, realizamos um processo conjunto de implantação com reuniões pedagógicas,
+                                treinamentos e muito mais!
+                            </p>
+                            <br>
+                            <h3>
+                                ASSESSORIA DE MARKETING
+                            </h3>
+                            <p>
+                                <span>
+                                    Força que impulsiona a marca da sua escola
+                                </span>
+                            </p>
+                            <p>
+                                O Portal de Marketing, o kit de matrículas e a nossa consultoria auxiliam o marketing
+                                educacional da sua escola de ensino básico. São peças físicas e digitais para atrair
+                                mais
+                                famílias com a marca forte da Digital Class!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section section02">
+                <div class="text-flex">
+                    <div class="box-text">
                         <p>
-                            Além do material completo, a <span>DC</span> pode te apoiar com serviços de <span>Gestão
-                                Escolar</span> nas
-                            principais decisões do dia a dia. O acompanhamento contínuo e o apoio resolutivo da nossa
-                            Consultoria Pedagógica têm sido essenciais para as escolas parceiras de berçário a
-                            pré-vestibular obterem <span>crescimento anual!</span>
+                            "Uma parceria que transforma pela <span>assessoria pedagógica</span> constante e pelas relações humanas
+                            com
+
+                            toda a equipe. Ser Digital Class é ser
+
+                            pioneiro em educação."
                         </p>
-                        <br>
-                        <h3>
-                            CONSULTORIA DE GESTÃO
-                        </h3>
-                        <p>
-                            <span>
-                                Apoio completo para alavancar os resultados da escola
-                            </span>
+                        <p id="color-text">
+                            DC Batatais (SP)
+                            <br>
+                            Parceiro DC há 23 anos.
                         </p>
+                    </div>
+                    <div class="box-text">
                         <p>
-                            Nosso time irá realizar um plano de ação personalizado, baseado em dados e um diagnóstico
-                            detalhado da sua escola para impulsionar o crescimento do negócio e a captação de alunos.
-                            Além disso, realizamos um processo conjunto de implantação com reuniões pedagógicas,
-                            treinamentos e muito mais!
+                            "A Digital Class foi a decisão mais inteligente que tomamos. Um dos resultados foi a
+                            <span>construção de
+                            identidade</span> dentro da nossa comunidade, com um perfil sólido que fortalece a nossa imagem."
                         </p>
-                        <br>
-                        <h3>
-                            ASSESSORIA DE MARKETING
-                        </h3>
-                        <p>
-                            <span>
-                                Força que impulsiona a marca da sua escola
-                            </span>
+                        <p id="color-text">
+                            DC Belo Horizonte (MG)
+                            <br>
+                            Parceiro DC há 7 anos.
                         </p>
+                    </div>
+                    <div class="box-text">
                         <p>
-                            O Portal de Marketing, o kit de matrículas e a nossa consultoria auxiliam o marketing
-                            educacional da sua escola de ensino básico. São peças físicas e digitais para atrair mais
-                            famílias com a marca forte da Digital Class!
+                            "Estamos prontos para concorrer com as grandes redes. Nossos <span>trabalhos pedagógicos</span> ganharam
+                            um outro patamar. A nossa escola hoje está entre as melhores do país."
+                        </p>
+                        <p id="color-text">
+                            DC Lago Norte (DF)
+                            <br>
+                            Parceiro DC há 11 anos.
                         </p>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-</main>
-        <footer>
-            <div class="flexbox-footer">
-                <div class="box-footer">
-                    <img src="imagens/trophy.png" alt="">
-                </div>
-                <div class="box-footer">
-                    <img src="imagens/ideia.png" alt="">
-                </div>
-                <div class="box-footer">
-                    <img src="imagens/target.png" alt="">
-                </div>
-            </div>
-        </footer>
+    </main>
+    <footer>
+        <!-- INÍCIO DO NOSSO RODAPÉ -->
+        <nav>
+            <!--  Usando o nav para informar que a sessão é navegável -->
+            <div class="container-footer">
+                <!-- Um container/Div pai para estilizar e posicionar os itens -->
 
-        <script src="https://unpkg.com/scrollreveal"></script>
-        <script src="script.js"></script>
+                <div class="itens-footer1">
+                    <!--  Uma div com âncoras e ícones do font awesome -->
+                    <a href="">
+                        <i class="fa-brands fa-instagram"><span id="text">@digital_class</span></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-solid fa-envelope"><span id="text">digitalClassWorking@gmail.com</span></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-facebook"><span id="text">Digital Class</span></i>
+                    </a>
+                </div>
+
+
+                <div class="itens-footer2">
+                    <!-- Uma div que guarda uma lista com âncoras -->
+                    <ul>
+                        <a href="">
+                            <li> <span>Páginas</span></li>
+                        </a>
+                        <a href="home.html">
+                            <li>Home</li>
+                        </a>
+                        <a href="index.html">
+                            <li>Quem somos?</li>
+                        </a>
+                        <a href="">
+                            <li>Contate-nos</li>
+                        </a>
+                        <a href="">
+                            <li>Cursos</li>
+                        </a>
+                        <a href="">
+                            <li>Blog</li>
+                        </a>
+                    </ul>
+                </div>
+
+
+                <div class="itens-footer2">
+                    <!--  Outra div que também guarda uma lista com âncoras -->
+                    <ul>
+                        <a href="">
+                            <li> <span>Contato</span></li>
+                        </a>
+                        <a href="">
+                            <li>Fale com a Digital Class</li>
+                        </a>
+                        <a href="">
+                            <li>Ouvidoria</li>
+                        </a>
+                        <a href="">
+                            <li>FAQ</li>
+                        </a>
+                        <a href="">
+                            <li>Trabalhe conosco</li>
+                        </a>
+                        <a href="">
+                            <li>Dúvidas</li>
+                        </a>
+                    </ul>
+                </div>
+
+
+                <div class="itens-footer2">
+                    <!--  Última div que guarda uma lista com âncoras -->
+                    <ul>
+                        <a href="">
+                            <li> <span>Soluções</span></li>
+                        </a>
+                        <a href="">
+                            <li>Recursos Didáticos</li>
+                        </a>
+                        <a href="">
+                            <li>Educação Digital</li>
+                        </a>
+                        <a href="">
+                            <li>Simulados</li>
+                        </a>
+                        <a href="">
+                            <li>Consultoria</li>
+                        </a>
+                        <a href="">
+                            <li>Gestão de ensino</li>
+                        </a>
+                    </ul>
+
+                </div>
+        </nav>
+        <img src="imagens/Logo-DigitalClass.png" alt="Logo-DigitalClass">
+        <!--  Logo do site  -->
+        </div>
+
+    </footer>
+    <!--  FIM DO RODAPÉ -->
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
