--- a/contatos.html
+++ b/contatos.html
@@ -20,9 +20,9 @@
         <!-- Logo do site -->
 <ul>
 <!-- Uma lista com âncoras -->
-    <a href="">HOME</a>
+    <a href="home.html">HOME</a>
     <a href="index.html">QUEM SOMOS?</a>
-    <a href="">CONTATE-NOS</a>
+    <a href="contatos.html">CONTATE-NOS</a>
     <a href="">CURSOS</a>
     <a href="">I.A</a>
 </ul>
@@ -169,7 +169,7 @@
     <a href="index.html">
         <li>Quem somos?</li>
     </a>
-    <a href="">
+    <a href="contatos.html">
         <li>Contate-nos</li>
     </a>
     <a href="">
