--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <div class="links">
             <a href="home.html">HOME</a>
-            <a href="#">QUEM SOMOS?</a>
-            <a href="#">CONTATE-NOS</a>
+            <a href="index.html">QUEM SOMOS?</a>
+            <a href="contatos.html">CONTATE-NOS</a>
             <a href="#">CURSOS</a>
-            <a href="#">BLOG</a>
+            <a href="#">I.A</a>
         </div>
         <div class="login">
             <i class="fa-solid fa-user"></i>
@@ -208,14 +208,14 @@
                         <a href="index.html">
                             <li>Quem somos?</li>
                         </a>
-                        <a href="">
+                        <a href="contatos.html">
                             <li>Contate-nos</li>
                         </a>
                         <a href="">
                             <li>Cursos</li>
                         </a>
                         <a href="">
-                            <li>Blog</li>
+                            <li></li>
                         </a>
                     </ul>
                 </div>
